# SonnenBS

./: README.md
SB Simble Run/: Simple_run.docx
SB Solution/project_source/: CMakeLists.txt
SB Solution/project_source/logic/: CMakeLists.txt  MianApp.cpp
SB Solution/project_source/logic/QtManger/header/: QtManger.cpp  QtManger.h
SB Solution/project_source/logic/QtManger/source/: QtManger.cpp
SB Solution/project_source/logic/SystemModules/header/: battary.h  common_definition.h  controller.h  grid.h  house.h  inverter.h  measurement.h  panel.h  sonnen_bs.h
SB Solution/project_source/logic/SystemModules/source/: battary.cpp  controller.cpp  grid.cpp  house.cpp  inverter.cpp  panel.cpp  sonnen_bs.cpp
SB System Design/: Design.docx  ~$Design.docx
